-improved example -proxy-jersey-clien (url path shoudl be empty now) -cleanup richclient, removed most generics in richclient